syntax = "proto3";

//pb是protoc 生成go文件的包名
option go_package ="./;demoa";

service Demo {
  rpc GetDriverTags(GetDriverTagsRequest) returns (GetDriverTagsResponse) {}
}

message GetDriverTagsRequest {}
message GetDriverTagsResponse {
  optional string debug_msg = 1;
}
